feat: implementação de anexos de arquivos
- Add file upload functionality with validation (50MB limit, 25+ file types)
- Implement secure file download with automatic renaming for conflicts
- Add file removal with permission checks (author-only access)
- Create AnexoRepository with full CRUD operations and SQL injection protection
- Add FileAttachmentWidget with comprehensive UI and error handling
- Configure macOS sandbox permissions for file access
- Fix PostgreSQL Sql.named() usage for parameter binding
- Add file type icons, size formatting, and progress indicators
- Implement Downloads directory detection with fallback support

--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -28,5 +28,11 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>NSDocumentsFolderUsageDescription</key>
+	<string>Este app precisa acessar a pasta de documentos para gerenciar anexos de tarefas.</string>
+	<key>NSDownloadsFolderUsageDescription</key>
+	<string>Este app precisa acessar a pasta de downloads para salvar anexos.</string>
+	<key>NSDesktopFolderUsageDescription</key>
+	<string>Este app precisa acessar a área de trabalho para anexar arquivos às tarefas.</string>
 </dict>
 </plist>
