--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,10 @@ dependencies:
   postgres: ^3.5.6
   uuid: ^4.5.1
   flutter_colorpicker: ^1.1.0
+  file_picker: ^8.1.2
+  path_provider: ^2.1.4
+  mime: ^1.0.6
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
